--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,11 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      # Étape 1 : Récupérer le code du dépôt
       - name: 🚚 Get latest code
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          ref: main   # ou master si ta branche principale s'appelle master
+          ref: main
 
       - name: 📂 Install dependencies
         uses: actions/setup-node@v2
@@ -20,7 +19,6 @@ jobs:
       - name: 📂 Install npm dependencies
         run: npm install
 
-      # Étape 2 : Déployer les fichiers via FTP sécurisé
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.6
         with:
@@ -28,7 +26,7 @@ jobs:
           username: quaiantiquerestaurant2
           password: ${{ secrets.ftp_password }}
           server-dir: /www/
-          local-dir: "Quai Antique restaurant front/"
+          local-dir: "Quai-Antique-restaurant-front/"
           protocol: ftp
           security: loose
           exclude: |
