--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,33 +5,27 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: 🚚 Get latest code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-          ref: main
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
 
-      - name: 📂 Install dependencies
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'  
+    - name: 📂 Install dependencies
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'  
 
-      - name: 📂 Install npm dependencies
-        run: npm install
-
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.6
-        with:
-          server: ftp-quaiantiquerestaurant2.alwaysdata.net
-          username: quaiantiquerestaurant2
-          password: ${{ secrets.ftp_password }}
-          server-dir: /www/
-         
-          protocol: ftp
-          security: loose
-          exclude: |
-            **/.git*
-            **/.git*/**
-            **/node_modules/bootstrap/scss/**
-            **/node_modules/bootstrap/js/**
-            **/node_modules/bootstrap-icons/icons/**
+    - name: 📂 Install npm dependencies
+      run: npm install
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ftp-quaiantiquerestaurant.alwaysdata.net
+        username: quaiantiquerestaurant
+        password : ${{ secrets.ftp_password }}
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/node_modules/bootstrap/scss/**
+          **/node_modules/bootstrap/js/**
+          **/node_modules/bootstrap-icons/icons/**  
+        server-dir: /www/
