--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         server: ftp-quaiantiquerestaurant.alwaysdata.net
         username: quaiantiquerestaurant
-        password : ${{ secrets.ftp_password }}
+        password: ${{ secrets.ftp_password }}
         exclude: |
           **/.git*
           **/.git*/**
@@ -29,3 +29,4 @@ jobs:
           **/node_modules/bootstrap/js/**
           **/node_modules/bootstrap-icons/icons/**  
         server-dir: /www/
+        secure: true   # <-- correction pour FTPS
