Update FTP action and configuration in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,16 +17,16 @@ jobs:
       run: npm install
     
     - name: 📂 Sync files
-      uses: andrewwilkinson/ftp-action@v1
+      uses: sebastianpopp/ftp-action@releases/v1
       with:
         host: ftp-quaiantiquerestaurant.alwaysdata.net
-        username: quaiantiquerestaurant
+        user: quaiantiquerestaurant
         password: ${{ secrets.ftp_password }}
-        protocol: ftps
-        local-dir: ./
-        server-dir: /www/
+        localDir: "./"
+        remoteDir: "/www/"
+        forceSsl: true
         exclude: |
-          .git*
+          **/.git*
           **/.git*/**
           **/node_modules/bootstrap/scss/**
           **/node_modules/bootstrap/js/**
