--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp-quaiantiquerestaurant.alwaysdata.net
-        username: quaiantiquerestaurant
+        server: ftp-quaiantiquerestaurant2.alwaysdata.net
+        username: quaiantiquerestaurant2
         password: ${{ secrets.ftp_password }}
         server-dir: /www/
         exclude: |
